--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -451,7 +451,7 @@
 
   <select ref="assessment/categories">
     <label>Describe the Patient's Assessment</label>
-    <item><label>Hypertension(&gt;= 140 / &gt;= 90)</label><value>hypertension</value></item>
+    <item><label>Hypertension(&#x2265; 140 / &#x2265; 90)</label><value>hypertension</value></item>
     <item><label>Fever &gt; 38&#xb0;C</label><value>fever</value></item>
     <item><label>Vaginal Bleeding</label><value>vag_bleeding</value></item>
     <item><label>Contractions</label><value>contract</value></item>
@@ -463,27 +463,27 @@
 
   <select ref="assessment/hypertension">
     <label>Symptoms of Hypertension</label>
-    <item><label>SEVERE: SBP &gt;= 160</label><value>sev_sbp</value></item>
-	<item><label>SEVERE: DBP &gt;= 110</label><value>sev_dbp</value></item>
-	<item><label>SEVERE: urine protein &gt;= 3+</label><value>sev_urine</value></item>
+    <item><label>SEVERE: SBP &#x2265; 160</label><value>sev_sbp</value></item>
+	<item><label>SEVERE: DBP &#x2265; 110</label><value>sev_dbp</value></item>
+	<item><label>SEVERE: urine protein &#x2265; 3+</label><value>sev_urine</value></item>
     <item><label>SEVERE: hgb &lt; 8 g/dL</label><value>sev_hgb</value></item>
     <item><label>SEVERE: seizure</label><value>sev_seizure</value></item>
     <item><label>SEVERE: altered mental status</label><value>sev_altered</value></item>
 	<item><label>SEVERE: severe headache</label><value>sev_headache</value></item>
     <item><label>SEVERE: visual changes</label><value>sev_vision_changes</value></item>
     <item><label>SEVERE:  abd pain/tenderness</label><value>sev_abd_pain</value></item>
-    <item><label>MODERATE: SBP &gt;= 140</label><value>mod_sbp</value></item>
-    <item><label>MODERATE: DBP &gt;= 90</label><value>mod_dbp</value></item>
+    <item><label>MODERATE: SBP &#x2265; 140</label><value>mod_sbp</value></item>
+    <item><label>MODERATE: DBP &#x2265; 90</label><value>mod_dbp</value></item>
     <item><label>MODERATE: urine protein 1+ to 2+</label><value>mod_urine</value></item>
-    <item><label>MODERATE: hgb &gt;= 8 g/dL</label><value>mod_hgb</value></item>
+    <item><label>MODERATE: hgb &#x2265; 8 g/dL</label><value>mod_hgb</value></item>
 	<item><label>Section Left Blank</label><value>blank</value></item>
   </select>
 
   <select ref="assessment/fever">
     <label>Symptoms of Fever</label>
-    <item><label>SEVERE: SBP &lt;= 90</label><value>sev_sbp</value></item>
-    <item><label>SEVERE: RR &gt;= 20</label><value>sev_rr</value></item>
-    <item><label>SEVERE: mat HR &gt;= 100 bpm</label><value>sev_hr</value></item>
+    <item><label>SEVERE: SBP &#x2264; 90</label><value>sev_sbp</value></item>
+    <item><label>SEVERE: RR &#x2265; 20</label><value>sev_rr</value></item>
+    <item><label>SEVERE: mat HR &#x2265; 100 bpm</label><value>sev_hr</value></item>
     <item><label>SEVERE: altered mental status</label><value>sev_altered</value></item>
     <item><label>SEVERE: headache/neck stiffness</label><value>sev_headache</value></item>
     <item><label>SEVERE: foul vaginal discharge</label><value>sev_foul_vag_discharge</value></item>
@@ -495,12 +495,12 @@
 
   <select ref="assessment/vag_bleeding">
     <label>Symptoms of Vaginal Bleeding</label>
-    <item><label>SEVERE: SBP &lt;= 90</label><value>sev_sbp</value></item>
-    <item><label>SEVERE: RR &gt;= 20</label><value>sev_rr</value></item>
-    <item><label>SEVERE: mat HR &gt;= 100 bpm</label><value>sev_hr</value></item>
+    <item><label>SEVERE: SBP &#x2264; 90</label><value>sev_sbp</value></item>
+    <item><label>SEVERE: RR &#x2265; 20</label><value>sev_rr</value></item>
+    <item><label>SEVERE: mat HR &#x2265; 100 bpm</label><value>sev_hr</value></item>
     <item><label>SEVERE: hgb &lt; 8 g/dL</label><value>sev_hgb</value></item>
     <item><label>SEVERE: altered mental status</label><value>sev_altered</value></item>
-    <item><label>MODERATE: hgb &gt;= 8 g/dL</label><value>mod_hgb</value></item>
+    <item><label>MODERATE: hgb &#x2265; 8 g/dL</label><value>mod_hgb</value></item>
     <item><label>MODERATE: abd pain/tenderness</label><value>mod_abd_pain</value></item>
 	<item><label>Section Left Blank</label><value>blank</value></item>
   </select>
@@ -508,21 +508,21 @@
   <select ref="assessment/contract">
     <label>Symptoms of Contractions</label>
     <item><label>SEVERE: GA 28-33 weeks, cervix dilated</label><value>sev_cervix</value></item>
-    <item><label>MODERATE: GA &gt;= 34 weeks, cervix dilated</label><value>mod_cervix</value></item>
+    <item><label>MODERATE: GA &#x2265; 34 weeks, cervix dilated</label><value>mod_cervix</value></item>
 	<item><label>Section Left Blank</label><value>blank</value></item>
   </select>
 
   <select ref="assessment/rupture">
     <label>Symptoms of Rupture of Membranes prior to Active Labour</label>
-    <item><label>SEVERE: SBP &lt;= 90</label><value>sev_sbp</value></item>
-    <item><label>SEVERE: RR &gt;= 20</label><value>sev_rr</value></item>
-    <item><label>SEVERE: mat HR &gt;= 100 bpm</label><value>sev_hr</value></item>
-    <item><label>SEVERE: temp &gt;= 38&#xb0;C</label><value>sev_temp</value></item>
-    <item><label>SEVERE: GA &gt;= 34 wks, ROM &gt;= 24h</label><value>sev_ga_rom</value></item>
+    <item><label>SEVERE: SBP &#x2264; 90</label><value>sev_sbp</value></item>
+    <item><label>SEVERE: RR &#x2265; 20</label><value>sev_rr</value></item>
+    <item><label>SEVERE: mat HR &#x2265; 100 bpm</label><value>sev_hr</value></item>
+    <item><label>SEVERE: temp &#x2265; 38&#xb0;C</label><value>sev_temp</value></item>
+    <item><label>SEVERE: GA &#x2265; 34 wks, ROM &#x2265; 24h</label><value>sev_ga_rom</value></item>
     <item><label>SEVERE: GA 28-34 weeks</label><value>sev_ga</value></item>
     <item><label>SEVERE: abd pain/tenderness</label><value>sev_abd_pain</value></item>
     <item><label>SEVERE: foul vaginal discharge</label><value>sev_foul_vag_discharge</value></item>
-    <item><label>MODERATE: GA &gt;= 34 wks, in labour</label><value>mod_ga</value></item>
+    <item><label>MODERATE: GA &#x2265; 34 wks, in labour</label><value>mod_ga</value></item>
 	<item><label>Section Left Blank</label><value>blank</value></item>
   </select>
 
