allow multiple multiselect buttons to trigger 'as select1' behavior

--- a/bhoma/xforms/touchscreen_showcase.xhtml
+++ b/bhoma/xforms/touchscreen_showcase.xhtml
@@ -76,12 +76,13 @@
   <input ref="q16" appearance="mode: autocomplete; autocomplete-key: firstname-female;"><label>First Name (Female)</label></input>
   <input ref="q14" appearance="domain: village; mode: autocomplete;"><label>Village</label></input>
 
-  <select ref="q17" appearance="as-select1: 4;">
+  <select ref="q17" appearance="as-select1: 4, 5;">
   <label>Risk Factors (clicking None will advance automatically)</label>
   <item><label>Alpha</label><value>a</value></item>
   <item><label>Beta-carotene</label><value>b</value></item>
   <item><label>Gammalicious</label><value>c</value></item>
   <item><label>None</label><value>none</value></item>
+  <item><label>None2</label><value>none2</value></item>
   </select>
 
   <select1 ref="done"><label>All done</label><item><label>OK</label><value>ok</value></item></select1>
