add a level of indirection for ID field prefixes (this allows use to prefix the CHW referral ID in xforms)

--- a/bhoma/xforms/bhoma_delivery.xhtml
+++ b/bhoma/xforms/bhoma_delivery.xhtml
@@ -265,7 +265,7 @@
 </h:head>			
 <h:body>
 
-  <input ref="chw_referral_id" appearance="domain: numeric; mask: xxx-x-xxxx;">>
+  <input ref="chw_referral_id" appearance="domain: numeric; mask: xxx-x-xxxx; prefix: _chwref;">
     <label>Enter CHW Referral # (leave blank if not available)</label>
 	<hint> This is the Referral ID on the Referral Form from the CHW </hint>
   </input>
