--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -236,7 +236,7 @@
 	<hint> Encounter could either be a New Case or Review depending on the type of visit </hint>
   </select1>
 
-  <input ref="chw_referral_id" appearance="domain: numeric; mask: xxx-x-xxxx;">>
+  <input ref="chw_referral_id" appearance="domain: numeric; mask: xxx-x-xxxx; prefix: _chwref;">
     <label>Enter CHW Referral # (leave blank if not available)</label>
 	<hint> This is the Referral ID on the Referral Form from the CHW </hint>
   </input>
